Backend logic for email scanner

--- a/frontend/scanner.html
+++ b/frontend/scanner.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 </head>
 <body>
-    
+    <input type="text" name="input_text" placeholder="Paste your email into here">
 </body>
 </html>
