--- a/frontend/index.html
+++ b/frontend/index.html
@@ -50,8 +50,8 @@
                 </a>
                 <ul class="dropdown-menu bg-info">
                   <li>
-                    <a class="dropdown-item bg-info text-light" href="#"
-                      >Action</a
+                    <a class="dropdown-item bg-info text-light" href="information.html"
+                      >Information Section</a
                     >
                   </li>
                   <li>
