--- a/frontend/information.html
+++ b/frontend/information.html
@@ -14,5 +14,15 @@
         <li>Challenge: Could it be too good to be true or fake? Only a criminal will rush or panic you.</li>
         <li>Protect: Don't bottle it up. Contact your bank if you think you've fallen for a scam. The sooner, the better.</li>
         <li> <a href="https://www.actionfraud.police.uk/">The Action Fraud UK Website</a> </li>
+
+    <h1>Types of Fraud</h1>
+    <h2>Advance Fee Fraud</h2>
+    <p>Fraud type where a victim pays for goods or services that do not exist.</p>
+    <p>This list is not exhaustive.</p>
+    <ul>
+        <li>Psychic Fraud: Criminal predicts your future, but needs money first.
+        <li>Inheritance Fraud: An unexpected inheritance from your great grandparent? Only if you pay a fee... </li>
+        <li>Lottery Fraud: You could be the winner of £500 million! Just pay a "small" admin fee first. </li>
+        <li> <a href="https://www.barclays.co.uk/fraud-and-scams/advance-fee-scams/">Support on Advance Fee Fraud</a>
 </body>
 </html>
