added app scam information

--- a/frontend/information.html
+++ b/frontend/information.html
@@ -16,6 +16,7 @@
         <li> <a href="https://www.actionfraud.police.uk/">The Action Fraud UK Website</a> </li>
 
     <h1>Types of Fraud</h1>
+
     <h2>Advance Fee Fraud</h2>
     <p>Fraud type where a victim pays for goods or services that do not exist.</p>
     <p>This list is not exhaustive.</p>
@@ -24,5 +25,14 @@
         <li>Inheritance Fraud: An unexpected inheritance from your great grandparent? Only if you pay a fee... </li>
         <li>Lottery Fraud: You could be the winner of £500 million! Just pay a "small" admin fee first. </li>
         <li> <a href="https://www.barclays.co.uk/fraud-and-scams/advance-fee-scams/">Support on Advance Fee Fraud</a>
+
+    <h2>Authorised Push Payment Fraud</h2>
+    <p>Fraud type where a criminal pretends to someone offical and trick you into sending money.</p>
+    <ul>
+        <li>Remember: Your bank will NEVER ask you to set up a "safe account".</li>
+        <li>Caution: Only transfer money to someone you definitely know and belong to.</li>
+        <li>Think: Who told me this account is legitimate? Have I checked their identity?</li>
+        <li> <a href="https://www.experian.co.uk/consumer/identity/app-fraud.html">Support on Authorised Push Payment Fraud</li>
+    </ul>
 </body>
 </html>
