--- a/frontend/index.html
+++ b/frontend/index.html
@@ -54,6 +54,12 @@
                       >Information Section</a
                     >
                   </li>
+                  <ul class="dropdown-menu bg-info">
+                  <li>
+                    <a class="dropdown-item bg-info text-light" href="emailscanner.html"
+                      >Email Scanner Section</a
+                    >
+                  </li>
                   <li>
                     <a class="dropdown-item bg-info text-light" href="#"
                       >Another action</a
