--- a/frontend/emailscanner.html
+++ b/frontend/emailscanner.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 </head>
 <body>
-    <input type="text" id="inputtext" placeholder="Paste your email into here">
-    <button id="submitbutton">Scan</button>
+    <form action="/scan" method="POST">
+        <input type="text" id="inputtext" placeholder="Paste your email into here">
+        <button type="submit" id="submitbutton">Scan</button>
+    </form>
     <pre id="resultRep" style="white-space: pre-wrap; margin-top: 1rem;"></pre>
 
     <script>
@@ -16,7 +18,7 @@
             const inputText = document.getElementById('inputtext').value;
 
             try {
-                const response = await fetch('/backend/emailscanner/scan', {
+                const response = await fetch('/scan', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
