quiz is on homepage

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -60,6 +60,13 @@
                       >Email Scanner Section</a
                     >
                   </li>
+
+                  <li>
+                    <a class="dropdown-item bg-info text-light" href="quiz.html"
+                      >Quiz Section</a
+                    >
+                  </li>
+
                   <li>
                     <a class="dropdown-item bg-info text-light" href="#"
                       >Another action</a
