image should appear

--- a/frontend/quiz.html
+++ b/frontend/quiz.html
@@ -11,7 +11,7 @@
     <p>Test your knowledge on scams and how to prevent this. Score highly to earn a certificate.</p>
 
     <h2>Question 1</h2>
-    <img src="/Quiz Questions/Question_1_Image.png" alt="Question 1 Image">
+    <img src="/Quiz Questions/Question_1_Image.png" alt="Question 1 Image" style="width:1024px;height:1024px;">
 
     <div class="form-check">
         <input type="radio" class="form-check-input" id="radio1" name="optradio" value="option1" checked>Scam
