--- a/frontend/quiz.html
+++ b/frontend/quiz.html
@@ -11,7 +11,7 @@
     <p>Test your knowledge on scams and how to prevent this. Score highly to earn a certificate.</p>
 
     <h2>Question 1</h2>
-    <img src="/Quiz Questions/Question_1_Image.png" alt="Question 1 Image" style="width:1024px;height:1024px;">
+    <img src="/Quiz Questions/Question_1_Image.png" alt="Question 1 Image" width="512" height="512">
 
     <div class="form-check">
         <input type="radio" class="form-check-input" id="radio1" name="optradio" value="option1" checked>Scam
@@ -20,6 +20,17 @@
     <div class="form-check">
         <input type="radio" class="form-check-input" id="radio2" name="optradio" value="option2">Not Scam
         <label class="form-check-label" for="radio2"></label>
-</div>
+    </div>
+
+    <h2>Question 2</h2>
+    <img src="/Quiz Questions/Question_2_Image.png" alt="Question 2 Image" width="512" height="512">
+
+    <div class="form-check">
+        <input type="radio" class="form-check-input" id="radio1" name="optradio" value="option1" checked>Scam
+        <label class="form-check-label" for="radio1"></label>
+    </div>
+    <div class="form-check">
+        <input type="radio" class="form-check-input" id="radio2" name="optradio" value="option2">Not Scam
+        <label class="form-check-label" for="radio2"></label>
 </body>
 </html>
