--- a/frontend/quiz.html
+++ b/frontend/quiz.html
@@ -11,7 +11,7 @@
     <p>Test your knowledge on scams and how to prevent this. Score highly to earn a certificate.</p>
 
     <h2>Question 1</h2>
-    <img src="/Quiz Questions/Question_1_Image.png" alt="Question 1 Image" width="512" height="512">
+    <img src="/Quiz_Questions/Question_1_Image.png" alt="Question 1 Image" width="512" height="512">
 
     <div class="form-check">
         <input type="radio" class="form-check-input" id="radio1" name="optradio" value="option1" checked>Scam
@@ -23,7 +23,7 @@
     </div>
 
     <h2>Question 2</h2>
-    <img src="/Quiz Questions/Question_2_Image.png" alt="Question 2 Image" width="512" height="512">
+    <img src="/Quiz_Questions/Question_2_Image.png" alt="Question 2 Image" width="512" height="512">
 
     <div class="form-check">
         <input type="radio" class="form-check-input" id="radio1" name="optradio" value="option1" checked>Scam
