main quiz completed

--- a/frontend/quiz.html
+++ b/frontend/quiz.html
@@ -10,11 +10,11 @@
     <h1>Quiz</h1>
     <p>Test your knowledge on scams and how to prevent this. Score highly to earn a certificate.</p>
 
-    <h2>Question 1</h2>
+    <h2>Question 1: The Holiday</h2>
     <img src="https://benjaminalbert387.github.io/hackabury2025/Quiz_Questions/Question_1_Image.png" alt="Question 1 Image" width="512" height="512">
 
     <div class="form-check">
-        <input type="radio" class="form-check-input" id="radio1" name="optradio" value="option1" checked>Scam
+        <input type="radio" class="form-check-input" id="radio1" name="optradio" value="option1">Scam
         <label class="form-check-label" for="radio1"></label>
     </div>
     <div class="form-check">
@@ -22,11 +22,44 @@
         <label class="form-check-label" for="radio2"></label>
     </div>
 
-    <h2>Question 2</h2>
+    <h2>Question 2: The Item</h2>
     <img src="https://benjaminalbert387.github.io/hackabury2025/Quiz_Questions/Question_2_Image.png" alt="Question 2 Image" width="512" height="512">
 
     <div class="form-check">
-        <input type="radio" class="form-check-input" id="radio1" name="optradio" value="option1" checked>Scam
+        <input type="radio" class="form-check-input" id="radio1" name="optradio" value="option1">Scam
+        <label class="form-check-label" for="radio1"></label>
+    </div>
+    <div class="form-check">
+        <input type="radio" class="form-check-input" id="radio2" name="optradio" value="option2">Not Scam
+        <label class="form-check-label" for="radio2"></label>
+
+    <h2>Question 3: The Overdraft</h2>
+    <img src="https://benjaminalbert387.github.io/hackabury2025/Quiz_Questions/Question_3_Image.png" alt="Question 2 Image" width="512" height="512">
+
+    <div class="form-check">
+        <input type="radio" class="form-check-input" id="radio1" name="optradio" value="option1">Scam
+        <label class="form-check-label" for="radio1"></label>
+    </div>
+    <div class="form-check">
+        <input type="radio" class="form-check-input" id="radio2" name="optradio" value="option2">Not Scam
+        <label class="form-check-label" for="radio2"></label>
+    
+    <h2>Question 4: The Accident</h2>
+    <img src="https://benjaminalbert387.github.io/hackabury2025/Quiz_Questions/Question_4_Image.png" alt="Question 2 Image" width="512" height="512">
+
+    <div class="form-check">
+        <input type="radio" class="form-check-input" id="radio1" name="optradio" value="option1">Scam
+        <label class="form-check-label" for="radio1"></label>
+    </div>
+    <div class="form-check">
+        <input type="radio" class="form-check-input" id="radio2" name="optradio" value="option2">Not Scam
+        <label class="form-check-label" for="radio2"></label>
+
+    <h2>Question 5: The Statement</h2>
+    <img src="https://benjaminalbert387.github.io/hackabury2025/Quiz_Questions/Question_5_Image.png" alt="Question 2 Image" width="512" height="512">
+
+    <div class="form-check">
+        <input type="radio" class="form-check-input" id="radio1" name="optradio" value="option1">Scam
         <label class="form-check-label" for="radio1"></label>
     </div>
     <div class="form-check">
