added submit button

--- a/frontend/quiz.html
+++ b/frontend/quiz.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Quiz</h1>
-    <p>Test your knowledge on scams and how to prevent this. Score highly to earn a certificate.</p>
+    <p>Test your knowledge on identifying scams, and how to prevent becoming a victim of one. Score highly to earn a certificate!</p>
 
     <h2>Question 1: The Holiday</h2>
     <img src="https://benjaminalbert387.github.io/hackabury2025/Quiz_Questions/Question_1_Image.png" alt="Question 1 Image" width="512" height="512">
@@ -65,5 +65,7 @@
     <div class="form-check">
         <input type="radio" class="form-check-input" id="radio2" name="optradio" value="option2">Not Scam
         <label class="form-check-label" for="radio2"></label>
+
+    <button type="button" class="btn btn-light">Submit your answers!</button>
 </body>
 </html>
