--- a/frontend/quiz.html
+++ b/frontend/quiz.html
@@ -65,7 +65,9 @@
     <div class="form-check">
         <input type="radio" class="form-check-input" id="radio2" name="optradio" value="option2">Not Scam
         <label class="form-check-label" for="radio2"></label>
+    </div>
 
     <button type="button" class="btn btn-light">Submit your answers!</button>
+    
 </body>
 </html>
