added bad words section

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -46,7 +46,7 @@
                   data-bs-toggle="dropdown"
                   aria-expanded="false"
                 >
-                  Dropdown
+                  Dropdown Navigation Menu
                 </a>
                 <ul class="dropdown-menu bg-info">
                   <li>
@@ -68,10 +68,17 @@
                   </li>
 
                   <li>
+                    <a class="dropdown-item bg-info text-light" href="badwords.html"
+                      >Bad Words Section</a
+                    >
+                  </li>
+
+                  <li>
                     <a class="dropdown-item bg-info text-light" href="#"
                       >Another action</a
                     >
                   </li>
+
                   <li><hr class="dropdown-divider" /></li>
                   <li>
                     <a class="dropdown-item bg-info text-light" href="#"
