--- a/frontend/badwords.html
+++ b/frontend/badwords.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Examples of "Bad Words":</h1>
     <p>Certain words are more commonly used in scam and spam emails.</p>
-    <p>The table below has these words included, so you can be more vigilant.</p>
+    <p>The table below has these words included, so you can be more vigilant when reading emails.</p>
     
     <table class="table">
   <thead>
@@ -17,6 +17,7 @@
       <th scope="col">#</th>
       <th scope="col">Column 1</th>
       <th scope="col">Column 2</th>
+      <th scope="col">Column 3</th>
     </tr>
   </thead>
 
@@ -26,9 +27,6 @@
       <td>prize</td>
       <td>diamond</td>
       <td>required</td>
-      <td>inheritance</td>
-      <td>now</td>
-      <td>alyae</td>
     </tr>
 
     <tr>
@@ -36,12 +34,23 @@
       <td>consignment</td>
       <td>100</td>
       <td>government</td>
+    </tr>
+
+    <tr>
+      <th scope="row">Row 3</th>
+      <td>inheritance</td>
+      <td>now</td>
+      <td>alyae</td>
+    </tr>
+
+    <tr>
+      <th scope="row">Row 4</th>
       <td>business</td>
       <td>urgent</td>
       <td>royalty</td>
     </tr>
-
   </tbody>
+
 </table>
 
 </body>
