--- a/frontend/information.html
+++ b/frontend/information.html
@@ -46,6 +46,9 @@
         <li> <a href="https://crimestoppers-uk.org/get-involved/campaigns/calling-out-courier-fraud">Support on Courier Fraud</a> </li>
     </ul>
 
+<a href="index.html" target="_self">
+  <button>Return to the Home Page</button>
+</a>
     
 </body>
 </html>
