--- a/frontend/quiz.html
+++ b/frontend/quiz.html
@@ -68,6 +68,10 @@
     </div>
 
     <button type="button" class="btn btn-light">Submit your answers!</button>
-    
+
+<a href="index.html" target="_self">
+  <button>Return to the Home Page</button>
+</a>
+
 </body>
 </html>
