--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,13 +7,13 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <title>Document</title>
+    <title>Hackabury 2025: Mankar Fanclub Submission</title>
   </head>
   <body>
     <header>
       <nav class="navbar navbar-expand-lg bg-info">
         <div class="container-fluid">
-          <a class="navbar-brand text-light" href="#">Navbar</a>
+          <a class="navbar-brand text-light" href="#">Navigation Bar</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -107,5 +107,9 @@
       </nav>
     </header>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+    <h1>Welcome! This is our submission for Barclays Life Skills (Hackabury 2025) </h1>
+    <p>Use the mobile friendly navigation bar and explore the different sections of the website. </p>
+
   </body>
 </html>
