--- a/frontend/index.html
+++ b/frontend/index.html
@@ -110,6 +110,7 @@
 
     <h1>Welcome! This is our submission for Barclays Life Skills (Hackabury 2025) </h1>
     <p>Use the mobile friendly navigation bar and explore the different sections of the website. </p>
+    <img src="barclays_life_skills_logo.png" alt="Barclays Life Skills Logo">
 
   </body>
 </html>
