resized images, added page titles

--- a/frontend/quiz.html
+++ b/frontend/quiz.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Quiz Section</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 </head>
 <body>
-    <h1>Quiz</h1>
+    <h1>The Big Quiz</h1>
     <p>Test your knowledge on identifying scams, and how to prevent becoming a victim of one. Score highly to earn a certificate!</p>
 
     <h2>Question 1: The Holiday</h2>
-    <img src="https://benjaminalbert387.github.io/hackabury2025/Quiz_Questions/Question_1_Image.png" alt="Question 1 Image" width="512" height="512">
+    <img src="https://benjaminalbert387.github.io/hackabury2025/Quiz_Questions/Question_1_Image.png" alt="Question 1 Image" width="375" height="375">
 
     <div class="form-check">
         <input type="radio" class="form-check-input" id="radio1" name="optradio" value="option1">Scam
@@ -23,7 +23,7 @@
     </div>
 
     <h2>Question 2: The Item</h2>
-    <img src="https://benjaminalbert387.github.io/hackabury2025/Quiz_Questions/Question_2_Image.png" alt="Question 2 Image" width="512" height="512">
+    <img src="https://benjaminalbert387.github.io/hackabury2025/Quiz_Questions/Question_2_Image.png" alt="Question 2 Image" width="375" height="375">
 
     <div class="form-check">
         <input type="radio" class="form-check-input" id="radio1" name="optradio" value="option1">Scam
@@ -34,7 +34,7 @@
         <label class="form-check-label" for="radio2"></label>
 
     <h2>Question 3: The Overdraft</h2>
-    <img src="https://benjaminalbert387.github.io/hackabury2025/Quiz_Questions/Question_3_Image.png" alt="Question 2 Image" width="512" height="512">
+    <img src="https://benjaminalbert387.github.io/hackabury2025/Quiz_Questions/Question_3_Image.png" alt="Question 3 Image" width="375" height="375">
 
     <div class="form-check">
         <input type="radio" class="form-check-input" id="radio1" name="optradio" value="option1">Scam
@@ -45,7 +45,7 @@
         <label class="form-check-label" for="radio2"></label>
     
     <h2>Question 4: The Accident</h2>
-    <img src="https://benjaminalbert387.github.io/hackabury2025/Quiz_Questions/Question_4_Image.png" alt="Question 2 Image" width="512" height="512">
+    <img src="https://benjaminalbert387.github.io/hackabury2025/Quiz_Questions/Question_4_Image.png" alt="Question 4 Image" width="375" height="375">
 
     <div class="form-check">
         <input type="radio" class="form-check-input" id="radio1" name="optradio" value="option1">Scam
@@ -56,7 +56,7 @@
         <label class="form-check-label" for="radio2"></label>
 
     <h2>Question 5: The Statement</h2>
-    <img src="https://benjaminalbert387.github.io/hackabury2025/Quiz_Questions/Question_5_Image.png" alt="Question 2 Image" width="512" height="512">
+    <img src="https://benjaminalbert387.github.io/hackabury2025/Quiz_Questions/Question_5_Image.png" alt="Question 5 Image" width="375" height="375">
 
     <div class="form-check">
         <input type="radio" class="form-check-input" id="radio1" name="optradio" value="option1">Scam
