huge optimisaation in backend redundant code etc and organisation of code

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -106,11 +106,12 @@
         </div>
       </nav>
     </header>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-
     <h1>Welcome! This is our submission for Barclays Life Skills (Hackabury 2025) </h1>
     <p>Use the mobile friendly navigation bar and explore the different sections of the website. </p>
     <img src="https://benjaminalbert387.github.io/hackabury2025/barclays_life_skills_logo.png" alt="Barclays Life Skills Logo">
-
+    
+    <!-- Keep Scripts Under Body so loads after page better loading practice if not necessary to render before page loads 
+     which means u need to add to head to render script before loading rendering page. -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
