--- a/frontend/index.html
+++ b/frontend/index.html
@@ -108,7 +108,7 @@
     </header>
     <h1>Welcome! This is our submission for Barclays Life Skills (Hackabury 2025) </h1>
     <p>Use the mobile friendly navigation bar and explore the different sections of the website. </p>
-    <img src="https://benjaminalbert387.github.io/hackabury2025/barclays_life_skills_logo.png" alt="Barclays Life Skills Logo">
+    <img src="https://benjaminalbert387.github.io/hackabury2025/barclays_life_skills_logo.png" alt="Barclays Life Skills Logo" width="375" height="250">
     
     <!-- Keep Scripts Under Body so loads after page better loading practice if not necessary to render before page loads 
      which means u need to add to head to render script before loading rendering page. -->
