added guidance section

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -74,8 +74,8 @@
                   </li>
 
                   <li>
-                    <a class="dropdown-item bg-info text-light" href="#"
-                      >Another action</a
+                    <a class="dropdown-item bg-info text-light" href="guidance.html"
+                      >Guidance Section</a
                     >
                   </li>
 
@@ -85,6 +85,7 @@
                       >Something else here</a
                     >
                   </li>
+                  
                 </ul>
               </li>
               <li class="nav-item">
