--- a/frontend/guidance.html
+++ b/frontend/guidance.html
@@ -29,15 +29,24 @@
         <li>If you get a suspicious call, hang up and call 159!</li>
         <li>This is a phone number that will connect you to almost any bank within the UK.</li>
         <li> <a href="https://stopscamsuk.org.uk/campaign/get-help-now/">Learn more about 159</a> </li>
+    </ul>
 
-        <li>Once you've done that, you can contact the following numbers:</li>
+    <p>Once you've done that, you can contact the following numbers:</p>
+    <ul>
         <li>101, or <a href="https://www.police.uk/information-and-advice/reporting-crime/">report it to the police here.</a> </li>
         <li>0300 123 2040, or <a href="https://www.actionfraud.police.uk/">report it to Action Fraud here.</a></li>
+    </ul>
 
-        <li>For other forms of support like mental health, the following links and resources may be helpful.</li>
+    <p>For other forms of support like mental health, the following links and resources may be helpful.</p>
+    <ul>
         <li> <a href="https://www.citizensadvice.org.uk/">Citizens Advice</a> </li>
         <li>0300 102 1234, or <a href="https://www.mind.org.uk/">Mind UK</a> </li>
         <li>0800 1111, or <a href="https://www.childline.org.uk/">Childline (For young people under 19)</a> </li>
     </ul>
+
+    <a href="index.html" target="_self">
+        <button>Return to the Home Page</button>
+    </a>
+
 </body>
 </html>
