--- a/frontend/emailscanner.html
+++ b/frontend/emailscanner.html
@@ -18,7 +18,7 @@
             const inputText = document.getElementById('inputtext').value;
 
             try {
-                const response = await fetch('/scan', {
+                const response = await fetch('/text_scan', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
