--- a/frontend/guidance.html
+++ b/frontend/guidance.html
@@ -31,13 +31,13 @@
         <li> <a href="https://stopscamsuk.org.uk/campaign/get-help-now/">Learn more about 159</a> </li>
     </ul>
 
-    <p>Once you've done that, you can contact the following numbers:</p>
+    <h3>Once you've done that, you can contact the following numbers:</h3>
     <ul>
         <li>101, or <a href="https://www.police.uk/information-and-advice/reporting-crime/">report it to the police here.</a> </li>
         <li>0300 123 2040, or <a href="https://www.actionfraud.police.uk/">report it to Action Fraud here.</a></li>
     </ul>
 
-    <p>For other forms of support like mental health, the following links and resources may be helpful.</p>
+    <h3>For other forms of support like mental health, the following links and resources may be helpful.</h3>
     <ul>
         <li> <a href="https://www.citizensadvice.org.uk/">Citizens Advice</a> </li>
         <li>0300 102 1234, or <a href="https://www.mind.org.uk/">Mind UK</a> </li>
