--- a/frontend/quiz.html
+++ b/frontend/quiz.html
@@ -69,6 +69,9 @@
 
     <button type="button" class="btn btn-light">Submit your answers!</button>
 
+    <button type="button" class="btn btn-light" onclick="window.location.href='https://benjaminalbert387.github.io/hackabury2025/Quiz_Questions/Quiz_Certificate.png';">
+      Claim your certificate!</button>
+
 <a href="index.html" target="_self">
   <button>Return to the Home Page</button>
 </a>
