--- a/frontend/index.html
+++ b/frontend/index.html
@@ -79,6 +79,12 @@
                     >
                   </li>
 
+                  <li>
+                    <a class="dropdown-item bg-info text-light" href="src/templates/uRLScanner.html"
+                    >URL Scanner</a
+                    >
+                  </li>
+
                   <li><hr class="dropdown-divider" /></li>
                   <li>
                     <a class="dropdown-item bg-info text-light" href="#"
@@ -113,7 +119,7 @@
 
     <h1>Clickable Icons</h1>
     <p>If you don't want to use the navigation bar, you can click on the icons below.</p>
-    
+
     <a href="quiz.html">
         <img src=
         "https://benjaminalbert387.github.io/hackabury2025/Icons/Quiz_Normal.png"
