--- a/frontend/index.html
+++ b/frontend/index.html
@@ -80,7 +80,7 @@
                   </li>
 
                   <li>
-                    <a class="dropdown-item bg-info text-light" href="src/templates/uRLScanner.html"
+                    <a class="dropdown-item bg-info text-light" href="https://benjaminalbert387.github.io/hackabury2025/src/templates/uRLScanner.html"
                     >URL Scanner</a
                     >
                   </li>
