Changed file path for form

--- a/frontend/emailscanner.html
+++ b/frontend/emailscanner.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 </head>
 <body>
-    <form action="/text_scan" method="POST">
+    <form action="/scanemail" method="POST">
         <input type="text" id="inputtext" placeholder="Paste your email into here">
         <button type="submit" id="submitbutton">Scan</button>
     </form>
