added more buttons

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -125,6 +125,24 @@
         "https://benjaminalbert387.github.io/hackabury2025/Icons/Quiz_Normal.png"
             alt="Click to visit the Big Quiz!">
     </a>
+
+    <a href="badwords.html">
+        <img src=
+        "https://benjaminalbert387.github.io/hackabury2025/Icons/Danger_Icon.png"
+          alt="Click to visit the Bad Words table">
+    </a>
+
+    <a href="information.html">
+        <img src=
+        "https://benjaminalbert387.github.io/hackabury2025/Icons/Info_Normal.png"
+          alt="Click to visit the Information Section">
+    </a>
+
+    <a href="guidance.html">
+        <img src=
+        "https://benjaminalbert387.github.io/hackabury2025/Icons/Contact_Normal.png"
+          alt="Click to visit the Guidance Section">
+    </a>
     
     <!-- Keep Scripts Under Body so loads after page better loading practice if not necessary to render before page loads 
      which means u need to add to head to render script before loading rendering page. -->
